--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
                            <td rowspan=2>Matematika Diskret dan Logika</td>
                            <td rowspan=2>3</td>
                            <td>Dr. Indriana Hidayah, S.T., M.T.</td>
-                           <td>-</td>
+                           <td>1-5</td>
                            <th><a href="https://teams.microsoft.com/l/meetup-join/19%3aa5d37ce16f7448f1985a23c4c6c71fc6%40thread.tacv2/1599721824028?context=%7b%22Tid%22%3a%22af2c0734-cb42-464f-b6bf-2a241b6ada56%22%2c%22Oid%22%3a%2205676819-257c-4b26-bb26-776f431ce735%22%7d">Join meeting</a></th>
                            <th rowspan=2><a href="https://forms.gle/yLe4V6KAJh7gaUp27">Absen di sini</a></th>
                         </tr>
                         <tr>
                            <td>Dr. Sri Suning Kusumawardani, S.T., M.T.</td>
-                           <td>-</td>
-                           <th>-</th>
+                           <td>6-10</td>
+                           <th><a href="https://ugm-spark.webex.com/ugm-spark/j.php?MTID=m4e8099e1c0b5fadff2851256807adb82">Join meeting</a></th>
                         </tr>
                
                         <tr>
