--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                            <td>2</td>
                            <td>Dani Adhipta, S.Si., M.T.</td>
                            <td>-</td>
-                           <th><a>-</a></th>
+                           <th><a href="https://teams.microsoft.com/l/team/19%3aac93df2d00dc4206ba56f16239253f10%40thread.tacv2/conversations?groupId=52ae863c-5b74-457e-b26d-a825592806d1&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56">Join meeting</a></th>
                            <th><a href="https://forms.gle/H8oGjzECF3PAwyYv9">Absen di sini</a></th>
                         </tr>
                         <tr>
