--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                            <td>Dr.Eng. Ir. Sunu Wibirama, S.T., M.Eng., IPM.</td>
                            <td>1-7</td>
                            <th><a href="https://teams.microsoft.com/l/team/19%3a5f05f9669756459ca731354929f1f000%40thread.tacv2/conversations?groupId=e690e184-010f-4a12-a699-d364b30f7ca5&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56">Join meeting</a></th>
-                           <th rowspan=2><a >-</a></th>
+                           <th rowspan=2><a href="https://forms.gle/2UWTZM7eEWL2YfeGA">Absen di sini</a></th>
                         </tr>
                         <tr>
                            <td>Bimo Sunarfri Hantono, S.T., M.Eng.</td>
