--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
                            <td rowspan=2>Medan Elektromagnetis</td>
                            <td rowspan=2>2</td>
                            <td>Iswandi, S.T., M.Eng.</td>
-                           <td>-</td>
+                           <td>1-10</td>
                            <th><a href="https://teams.microsoft.com/l/meetup-join/19%3a29913bc2c5644ea0af3fa7fa725b87af%40thread.tacv2/1599658180658?context=%7b%22Tid%22%3a%22af2c0734-cb42-464f-b6bf-2a241b6ada56%22%2c%22Oid%22%3a%22374f9416-a91e-4c13-aa10-d8bf52cb1d6d%22%7d">Join meeting</a></th> 
                            <th rowspan=2><a href="https://forms.gle/yD3EhHC8tLfk8ZHT8">Absen di sini</a></th>
                         </tr>
                         <tr>
                            <td>Ir. Sigit Basuki Wibowo, S.T., M.Eng., Ph.D., IPM.</td>
-                           <td>-</td>
+                           <td>11-14</td>
                            <th><a>-</a></th>
                         </tr>
                         
@@ -207,8 +207,7 @@
                            <td>Azkario Rizky Pratama, S.T., M.Eng.</td>
                            <td>1-7</td>
                            <th><a href="https://teams.microsoft.com/l/team/19%3a926f0eec754c41bc8f3f4e4ae2131170%40thread.tacv2/conversations?groupId=68309c2f-417a-47db-a799-d49284b3496f&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56">Join meeting</a></th>
-                           
-                           <th rowspan=2><a >-</a></th>
+                           <th rowspan=2><a href="https://forms.gle/rkEXMAbwvd8sD1iq6">Absen di sini</a></th>
                         </tr>
                         <tr>
                            <td>Dr.Eng. Ir. Sunu Wibirama, S.T., M.Eng., IPM.</td>
