--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                            <td rowspan=2>Aljabar Linear</td>
                            <td rowspan=2>3</td>
                            <td>Dr.Eng. Ir. Adha Imam Cahyadi,  S.T., M.Eng., IPM.</td>
-                           <td>-</td>
-                           <th><a >-</a></th>
-                           <th rowspan=2><a >-</a></th>
+                           <td>1-3 dan 11-14</td>
+                           <th><a href="https://teams.microsoft.com/l/team/19%3ade8332086b6a4083af96d06eefd7505b%40thread.tacv2/conversations?groupId=50510eb8-a023-44a1-894c-7ad772275da1&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56">Join meeting</a></th>
+                           <th rowspan=2><a href="https://forms.gle/R5fcqbH2NaN7T9dw6">Absen di sini</a></th>
                         </tr>
                         <tr>
                            <td>Husni Rois Ali, S.T., M.Eng., Ph.D.</td>
