--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                            <td >3</td>
                            <td>Ir. Selo, S.T., M.T., M.Sc, Ph.D.</td>
                            <td>1-14</td>
-                           <th><a href="https://teams.microsoft.com/l/team/19%3ac57c23394fd74708bff4919a501e9b2a%40thread.tacv2/conversations?groupId=6103910f-3d5d-49b7-8949-70e99ebdd6aa&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56"></a>Join meeting</a></th>
+                           <th><a href="https://teams.microsoft.com/l/team/19%3ac57c23394fd74708bff4919a501e9b2a%40thread.tacv2/conversations?groupId=6103910f-3d5d-49b7-8949-70e99ebdd6aa&tenantId=af2c0734-cb42-464f-b6bf-2a241b6ada56">Join meeting</a></th>
                            <th><a href="https://forms.gle/qbYR2Bjb8rzTVi4j6">Daftar di sini</a></th>
                         </tr>
                
